# test_utils

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: build.yaml  pre-commit.yaml  release.yaml  static-analysis.yml
actions/code_duplication/: action.yml
actions/diff_print_format/: action.yml
actions/generate_changelog/: action.yml  generate_changelog.py
actions/sql_registry/: action.yml
actions/translate_docs/: action.yml  translate_docs.py
docs/: index.md  partitions.md  pre_commit_hooks.md  sql_registry.md  static_analysis.md  validate_customizations.md
docs/actions/: code-duplication.md  diff_print_format.md  generate_changelog.md  track_overrides.md  translate_docs.md
test_utils/pre_commit/: add_translations.py  bylines.py  check_code_duplication.py  clean_customized_doctypes.py  patch_linters.py  sql_formatter.py  sql_registration.py  sql_rewriter_functions.py  track_overrides.py  update_pre_commit_config.py  validate_copyright.py  validate_customizations.py  validate_frappe_project.py  validate_javascript_dependencies.py  validate_python_dependencies.py
test_utils/utils/: chart_of_accounts.py  create_partition.py  customize.py  restore_partitions.py  restore_partitions_old.py  setup_fixtures.py  sql_pipeline.py  track_overrides.py
test_utils/utils/sql_registry/: __init__.py  cli.py  converter.py  models.py  registry.py  scanner.py
test_utils/utils/static_analysis/: __init__.py  frontend_validator.py  hooks_validator.py  patches_validator.py  path_resolver.py  python_call_validator.py  report_validator.py
