[tool.poetry]
name = "test_utils"
version = "1.0.2"
description = "Novigo Technology Test Utilities and Fixtures"
authors = ["Novigo Technology <earona@novigo.com.ar>"]
readme = "README.md"
packages = [
	{include = "test_utils"}
]

[tool.poetry.scripts]
clean_customized_doctypes = "test_utils.pre_commit.clean_customized_doctypes:main"
validate_copyright = "test_utils.pre_commit.validate_copyright:main"
validate_javascript_dependencies = "test_utils.pre_commit.validate_javascript_dependencies:main"
validate_python_dependencies = "test_utils.pre_commit.validate_python_dependencies:main"
validate_customizations = "test_utils.pre_commit.validate_customizations:main"
update_pre_commit_config = "test_utils.pre_commit.update_pre_commit_config:main"
create_partition = "test_utils.utils.create_partition:create_partition"

[tool.poetry.dependencies]
python = ">3.13,<3.15"
mypy = "^1.19.0"
toml = "^0.10.2"
tomli = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.ruff]
line-length = 110
target-version = "py314"
exclude = [
    "**/doctype/*/boilerplate/*.py" # boilerplate are template strings, not valid python
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
