[tool.poetry]
name = "test_utils"
version = "1.0.1"
description = "Novigo Technology Test Utilities and Fixtures"
authors = ["Novigo Technology <earona@novigo.com.ar>"]
readme = "README.md"
packages = [
	{include = "test_utils"}
]

[tool.poetry.scripts]
clean_customized_doctypes = "test_utils.pre_commit.clean_customized_doctypes:main"
validate_copyright = "test_utils.pre_commit.validate_copyright:main"
validate_javascript_dependencies = "test_utils.pre_commit.validate_javascript_dependencies:main"
validate_python_dependencies = "test_utils.pre_commit.validate_python_dependencies:main"
validate_customizations = "test_utils.pre_commit.validate_customizations:main"
update_pre_commit_config = "test_utils.pre_commit.update_pre_commit_config:main"

[tool.poetry.dependencies]
python = ">3.13,<3.15"
mypy = "^1.19.0"
toml = "^0.10.2"
tomli = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
