[project]
name = "test_utils"
version = "1.0.2"
description = "Novigo Technology Test Utilities and Fixtures"
authors = [
    {name = "Novigo Technology", email = "earona@novigo.com.ar"}
]
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["dependencies"]

[project.scripts]
clean_customized_doctypes = "test_utils.pre_commit.clean_customized_doctypes:main"
create_partition = "test_utils.utils.create_partition:create_partition"
track_overrides = "test_utils.pre_commit.track_overrides:main"
update_pre_commit_config = "test_utils.pre_commit.update_pre_commit_config:main"
validate_copyright = "test_utils.pre_commit.validate_copyright:main"
validate_customizations = "test_utils.pre_commit.validate_customizations:main"
validate_javascript_dependencies = "test_utils.pre_commit.validate_javascript_dependencies:main"
validate_python_dependencies = "test_utils.pre_commit.validate_python_dependencies:main"
add_translations = "test_utils.pre_commit.add_translations:main"
sql_registry = "test_utils.utils.sql_registry:main"
sql_rewriter = "test_utils.pre_commit.sql_registry:main"
sql_pipeline = "test_utils.utils.sql_pipeline:main"
bylines = "test_utils.pre_commit.bylines:main"
patch_linters = "test_utils.pre_commit.patch_linters:main"
validate_frappe_project = "test_utils.pre_commit.validate_frappe_project:main"
check_code_duplication = "test_utils.pre_commit.check_code_duplication:main"
static_analysis = "test_utils.pre_commit.static_analysis:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test_utils"
version = "1.0.2"
description = "Novigo Technology Test Utilities and Fixtures"
authors = ["Novigo Technology <earona@novigo.com.ar>"]
packages = [{include = "test_utils"}]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
mypy = "^1.19.0"
toml = "^0.10.2"
tomli = "^2.4.0"
requests = "^2.32.3"
sqlglot = "^29.0.0"
asttokens = ">=2.4.0"
astpath = {extras = ["xpath"], version = "^0.9.1"}
vulture = ">=2.0"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.4"
pytest = "^8.0.0"

[tool.codespell]
skip = "CHANGELOG.md, poetry.lock"

[tool.ruff]
line-length = 110
target-version = "py314"
exclude = [
    "**/doctype/*/boilerplate/*.py" # boilerplate are template strings, not valid python
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
